# ros_homework

devel/: .catkin  .rosinstall  setup.sh
devel/include/random_number_generator/: rn.h
devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
devel/lib/hls_lfcd_lds_driver/: hlds_laser_publisher  hlds_laser_segment_publisher
devel/lib/mobile_robot/: custom_joint_state_publisher  custom_odom_tf  state_publisher
devel/lib/open_manipulator_control_gui/: open_manipulator_control_gui
devel/lib/open_manipulator_controller/: open_manipulator_controller
devel/lib/open_manipulator_teleop/: open_manipulator_teleop_joystick  open_manipulator_teleop_keyboard
devel/lib/parameter_tutorials/: parameter_client  parameter_server
devel/lib/pkgconfig/: example.pc  hls_lfcd_lds_driver.pc  mobile_robot.pc  mobile_robot_description.pc  open_manipulator_control_gui.pc  open_manipulator_controller.pc  open_manipulator_description.pc  open_manipulator_libs.pc  open_manipulator_moveit.pc  open_manipulator_teleop.pc  parameter_tutorials.pc  random_number_generator.pc  tf_mat_example.pc  tf_practice.pc  tf_static_practice.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  turtlesim_pose_viewer.pc  ur5_description.pc  ur5_fk.pc
devel/lib/random_number_generator/: rn_publisher  rn_subscriber
devel/lib/tf_mat_example/: example  matrix
devel/lib/tf_practice/: tf_practice
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_slam/: flat_world_imu_node
devel/lib/turtlesim_pose_viewer/: topic_subscriber
devel/lib/ur5_description/: tf_mat_example
devel/lib/ur5_fk/: fk_main
devel/share/example/cmake/: exampleConfig.cmake
devel/share/hls_lfcd_lds_driver/cmake/: hls_lfcd_lds_driverConfig.cmake
devel/share/mobile_robot/cmake/: mobile_robotConfig.cmake
devel/share/mobile_robot_description/cmake/: mobile_robot_descriptionConfig.cmake
devel/share/open_manipulator_control_gui/cmake/: open_manipulator_control_guiConfig.cmake
devel/share/open_manipulator_controller/cmake/: open_manipulator_controllerConfig.cmake
devel/share/open_manipulator_description/cmake/: open_manipulator_descriptionConfig.cmake
src/HOMEWORK/tf_mat_example/: CMakeLists.txt  package.xml
src/HOMEWORK/ur5_description/: CMakeLists.txt  package.xml
src/HOMEWORK/ur5_description/src/: tf_mat_example.cpp
src/example/: package.xml
src/mobile_robot/: CMakeLists.txt  package.xml
src/mobile_robot/launch/: mobile_robot_gazebo.launch  mobile_robot_odometry.launch  mobile_robot_rviz.launch
src/mobile_robot/src/: custom_odom_tf.cpp
src/mobile_robot_description/: CMakeLists.txt  package.xml
src/parameter_tutorials/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/parameter_tutorials/src/: service_client.cpp  service_server.cpp
src/random_number_generator/: CMakeLists.txt  package.xml
src/random_number_generator/msg/: rn.msg
src/random_number_generator/src/: rn_pub.cpp  rn_sub.cpp
src/tf_practice/: CMakeLists.txt  package.xml
src/tf_practice/src/: tf_practice.cpp
src/tf_static_practice/: package.xml
src/tf_static_practice/launch/: static_tf.launch
src/turtlesim_pose_viewer/: CMakeLists.txt  package.xml
src/turtlesim_pose_viewer/src/: turtlesim_pose_subscriber.cpp
src/ur5_fk/: CMakeLists.txt  package.xml
src/ur5_fk/launch/: ur5_description.launch
src/ur5_fk/src/: fk_main.cpp
(+47 files in other folders)
